# LatticeKMC

./: CMakeLists.txt  Nano.i
Native/: base.hpp  catch.hpp  interop.hpp  kmc.hpp  lattice.hpp  logging.hpp  main.cpp  metropolis.hpp  nano.hpp  parallel.hpp  tests.cpp  timing.h
Python/: Nano.py  Post.py  demos.py  dep_graph.py  eq_energy.py  main.py  post.py  style.py  wrap.py
Python/figures/: MSD_diffusion.py  Metropolis_Phases.py  random_walk.py
Python/figures/data_cache/: MSD  metro_grid_2D  metro_grid_3D
